--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,158 +11,174 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <link rel="stylesheet" href="./css/styles.css" />
+
     <title>WebStudio</title>
   </head>
   <body>
     <header>
-      <nav>
-        <a href="./index.html" class="link logo"
-          >Web<span class="logo-dark-part">Studio</span></a
-        >
-        <ul class="list">
-          <li><a href="./index.html" class="link header-link">Studio</a></li>
-          <li>
-            <a href="./portfolio.html" class="link header-link">Portfolio</a>
-          </li>
-          <li><a href="" class="link header-link">Contacts</a></li>
-        </ul>
-      </nav>
-      <address class="address">
-        <ul class="list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="link address-link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="link address-link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container header-container">
+        <nav class="navigation">
+          <a href="./index.html" class="link logo header-logo"
+            >Web<span class="logo-dark-part">Studio</span></a
+          >
+          <ul class="list header-list">
+            <li><a href="./index.html" class="link header-link">Studio</a></li>
+            <li>
+              <a href="./portfolio.html" class="link header-link">Portfolio</a>
+            </li>
+            <li><a href="" class="link header-link">Contacts</a></li>
+          </ul>
+        </nav>
+        <address class="address">
+          <ul class="list header-list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="link address-link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+110001111111" class="link address-link"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <main>
-      <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="btn hero-btn">Order Service</button>
-      </section>
-      <section>
-        <h2 hidden class="visually-hidden">Features</h2>
-        <ul class="list">
-          <li>
-            <h3 class="card-title">Strategy</h3>
-            <p class="card-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3 class="card-title">Punctuality</h3>
-            <p class="card-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3 class="card-title">Diligence</h3>
-            <p class="card-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3 class="card-title">Technologies</h3>
-            <p class="card-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section class="descr">
-        <h2 class="descr-title">What are we doing</h2>
-        <ul class="list">
-          <li>
-            <img
-              src="./images/img1.jpg"
-              alt="image 1"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/img2.jpg"
-              alt="image 2"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img
-              src="./images/img3.jpg"
-              alt="image 3"
-              width="360"
-              height="300"
-            />
-          </li>
-        </ul>
-      </section>
-      <section class="team">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="list">
-          <li class="card">
-            <img
-              src="./images/photo1.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3 class="card-title">Mark Guerrero</h3>
-            <p class="card-text">Product Designer</p>
-          </li>
-          <li class="card">
-            <img
-              src="./images/photo2.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3 class="card-title">Tom Ford</h3>
-            <p class="card-text">Frontend Developer</p>
-          </li>
-          <li class="card">
-            <img
-              src="./images/photo3.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3 class="card-title">Camila Garcia</h3>
-            <p class="card-text">Marketing</p>
-          </li>
-          <li class="card">
-            <img
-              src="./images/photo4.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3 class="card-title">Daniel Wilson</h3>
-            <p class="card-text">UI Designer</p>
-          </li>
-        </ul>
-      </section>
+      <div class="container">
+        <section class="hero section">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button type="button" class="btn hero-btn">Order Service</button>
+        </section>
+        <section class="section">
+          <h2 hidden class="visually-hidden">Features</h2>
+          <ul class="list">
+            <li>
+              <h3 class="card-title">Strategy</h3>
+              <p class="card-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li>
+              <h3 class="card-title">Punctuality</h3>
+              <p class="card-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li>
+              <h3 class="card-title">Diligence</h3>
+              <p class="card-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li>
+              <h3 class="card-title">Technologies</h3>
+              <p class="card-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </section>
+        <section class="descr section">
+          <h2 class="descr-title">What are we doing</h2>
+          <ul class="list">
+            <li>
+              <img
+                src="./images/img1.jpg"
+                alt="image 1"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/img2.jpg"
+                alt="image 2"
+                width="360"
+                height="300"
+              />
+            </li>
+            <li>
+              <img
+                src="./images/img3.jpg"
+                alt="image 3"
+                width="360"
+                height="300"
+              />
+            </li>
+          </ul>
+        </section>
+        <section class="team section">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="list">
+            <li class="card">
+              <img
+                src="./images/photo1.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <h3 class="card-title">Mark Guerrero</h3>
+              <p class="card-text">Product Designer</p>
+            </li>
+            <li class="card">
+              <img
+                src="./images/photo2.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <h3 class="card-title">Tom Ford</h3>
+              <p class="card-text">Frontend Developer</p>
+            </li>
+            <li class="card">
+              <img
+                src="./images/photo3.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <h3 class="card-title">Camila Garcia</h3>
+              <p class="card-text">Marketing</p>
+            </li>
+            <li class="card">
+              <img
+                src="./images/photo4.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <h3 class="card-title">Daniel Wilson</h3>
+              <p class="card-text">UI Designer</p>
+            </li>
+          </ul>
+        </section>
+      </div>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="link logo"
-        >Web<span class="logo-light-part">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a href="./index.html" class="link logo"
+          >Web<span class="logo-light-part">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
