--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
     <title>WebStudio</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <div class="container header-container">
         <nav class="navigation">
           <a href="./index.html" class="link logo header-logo"
@@ -190,7 +190,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="link logo"
+        <a href="./index.html" class="link logo footer-logo"
           >Web<span class="logo-light-part">Studio</span></a
         >
         <p class="footer-text">
