--- a/portfolio.html
+++ b/portfolio.html
@@ -55,10 +55,10 @@
       </div>
     </header>
     <main>
-      <div class="container">
-        <section class="section">
+      <section class="section portfolio">
+        <div class="container">
           <h1 hidden class="visually-hidden">ych</h1>
-          <ul class="list">
+          <ul class="list pf-btn-list">
             <li>
               <button type="button" class="btn pf-btn">All</button>
             </li>
@@ -75,8 +75,8 @@
               <button type="button" class="btn pf-btn">Marketing</button>
             </li>
           </ul>
-          <ul class="list">
-            <li class="card">
+          <ul class="list pf-list">
+            <li class="card pf-item">
               <a href="" class="link">
                 <img
                   src="./images/banking.jpg"
@@ -84,11 +84,13 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="card-title">Banking App Interface Concept</h2>
-                <p class="card-text">App</p>
+                <div class="pf-card-descr">
+                  <h2 class="card-title">Banking App Interface Concept</h2>
+                  <p class="card-text">App</p>
+                </div>
               </a>
             </li>
-            <li class="card">
+            <li class="card pf-item">
               <a href="" class="link">
                 <img
                   src="./images/cashless.jpg"
@@ -96,11 +98,13 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="card-title">Cashless Payment</h2>
-                <p class="card-text">Marketing</p>
+                <div class="pf-card-descr">
+                  <h2 class="card-title">Cashless Payment</h2>
+                  <p class="card-text">Marketing</p>
+                </div>
               </a>
             </li>
-            <li class="card">
+            <li class="card pf-item">
               <a href="" class="link">
                 <img
                   src="./images/meditation.jpg"
@@ -108,11 +112,13 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="card-title">Meditation App</h2>
-                <p class="card-text">App</p>
+                <div class="pf-card-descr">
+                  <h2 class="card-title">Meditation App</h2>
+                  <p class="card-text">App</p>
+                </div>
               </a>
             </li>
-            <li class="card">
+            <li class="card pf-item">
               <a href="" class="link">
                 <img
                   src="./images/taxi.jpg"
@@ -120,11 +126,13 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="card-title">Taxi Service</h2>
-                <p class="card-text">Marketing</p>
+                <div class="pf-card-descr">
+                  <h2 class="card-title">Taxi Service</h2>
+                  <p class="card-text">Marketing</p>
+                </div>
               </a>
             </li>
-            <li class="card">
+            <li class="card pf-item">
               <a href="" class="link">
                 <img
                   src="./images/illustrations.jpg"
@@ -132,11 +140,13 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="card-title">Screen Illustrations</h2>
-                <p class="card-text">Design</p>
+                <div class="pf-card-descr">
+                  <h2 class="card-title">Screen Illustrations</h2>
+                  <p class="card-text">Design</p>
+                </div>
               </a>
             </li>
-            <li class="card">
+            <li class="card pf-item">
               <a href="" class="link">
                 <img
                   src="./images/courses.jpg"
@@ -144,11 +154,13 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="card-title">Online Courses</h2>
-                <p class="card-text">Marketing</p>
+                <div class="pf-card-descr">
+                  <h2 class="card-title">Online Courses</h2>
+                  <p class="card-text">Marketing</p>
+                </div>
               </a>
             </li>
-            <li class="card">
+            <li class="card pf-item">
               <a href="" class="link">
                 <img
                   src="./images/instagram.jpg"
@@ -156,11 +168,13 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="card-title">Instagram Stories Concept</h2>
-                <p class="card-text">Design</p>
+                <div class="pf-card-descr">
+                  <h2 class="card-title">Instagram Stories Concept</h2>
+                  <p class="card-text">Design</p>
+                </div>
               </a>
             </li>
-            <li class="card">
+            <li class="card pf-item">
               <a href="" class="link">
                 <img
                   src="./images/organic-food.jpg"
@@ -168,11 +182,13 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="card-title">Organic Food</h2>
-                <p class="card-text">Web Site</p>
+                <div class="pf-card-descr">
+                  <h2 class="card-title">Organic Food</h2>
+                  <p class="card-text">Web Site</p>
+                </div>
               </a>
             </li>
-            <li class="card">
+            <li class="card pf-item">
               <a href="" class="link">
                 <img
                   src="./images/coffee.jpg"
@@ -180,13 +196,15 @@
                   width="360"
                   height="300"
                 />
-                <h2 class="card-title">Fresh Coffee</h2>
-                <p class="card-text">Web Site</p>
+                <div class="pf-card-descr">
+                  <h2 class="card-title">Fresh Coffee</h2>
+                  <p class="card-text">Web Site</p>
+                </div>
               </a>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="container">
