--- a/portfolio.html
+++ b/portfolio.html
@@ -41,12 +41,14 @@
         <address class="address">
           <ul class="list header-list">
             <li>
-              <a href="mailto:info@devstudio.com" class="link address-link"
+              <a
+                href="mailto:info@devstudio.com"
+                class="link address-link address-flex"
                 >info@devstudio.com</a
               >
             </li>
             <li>
-              <a href="tel:+110001111111" class="link address-link"
+              <a href="tel:+110001111111" class="link address-link address-flex"
                 >+11 (000) 111-11-11</a
               >
             </li>
